--- a/pexel4.css
+++ b/pexel4.css
@@ -52,7 +52,7 @@
     background: #ffff;
     border: none;
     outline: none;
-    font-size: medium;
+    font-size: small;
 }
 .nav-container{
     display: flex;
